--- a/app/src/main/res/layout/confirmation_item.xml
+++ b/app/src/main/res/layout/confirmation_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
@@ -20,10 +20,19 @@
         android:id="@+id/confirmOrderItemQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/confirmOrderItemName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="X"
+        app:layout_constraintEnd_toStartOf="@+id/confirmOrderItemQuantity"
         app:layout_constraintTop_toTopOf="parent" />
 
 
