--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="245dp"
         android:scaleType="fitXY"
         android:src="@drawable/new_fallow" />
     <TextView
@@ -24,11 +24,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User"/>
+        android:text="Phone"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_user"/>
+        android:id="@+id/edit_phone"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_email"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Customer"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_customer"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,6 +54,13 @@
         android:background="@drawable/btn_gradient_style"
         android:text="Submit"/>
 
+    <Button
+        android:id="@+id/adminData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_gradient_style"
+        android:text="Accounts" />
 
 
 </LinearLayout>
